--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -9,6 +9,10 @@ a, a:visited, a:hover, a:active {
   text-decoration: none;
 }
 
+#navbar {
+  background-color: black;
+}
+
 
 #images {
   float: left;
