--- a/views/Show Pages/newAustin.ejs
+++ b/views/Show Pages/newAustin.ejs
@@ -28,32 +28,10 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Search<span class="sr-only">(current)</span></a></li>
         <li><a href="new">Sell My Home</a></li>
-        <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="tel:5122709688">Phone Number</a></li>
         <li><a href="login">Login/Register</a></li>
-        <!-- <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li> -->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -101,11 +79,11 @@
           <p><label for="price">Price</label><br>
             <input type="text" id="price" name="price"></p>
 
-          <p><label for="squareFeet">Square Feet</label>
-            <input type="text" id="squareFeet" name="squareFeet"></p>
+          <p><label for="sqft">Square Feet</label>
+            <input type="text" id="sqft" name="sqft"></p>
 
-            <p><label for"bedrooms">Bedrooms</label>
-            <select id="bedrooms" name="bedrooms">
+            <p><label for"beds">Bedrooms</label>
+            <select id="beds" name="beds">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -114,8 +92,8 @@
                 <option value="6">6+</option>
             </select></p>
 
-          <p><label for"bathrooms">Bathrooms</label>
-            <select id="bathrooms" name="bathrooms">
+          <p><label for"baths">Bathrooms</label>
+            <select id="baths" name="baths">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -126,8 +104,8 @@
            <p><label for="yearBuilt">Year Built</label>
           <input type="text" id="yearBuilt" name="yearBuilt"></p>
 
-          <p><label for"garages">Garages</label>
-            <select id="garages" name="garages">
+          <p><label for"garage">Garages</label>
+            <select id="garage" name="garage">
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3+</option>
@@ -192,8 +170,8 @@
                 <option value="yearly">Yearly</option>
             </select></p>
 
-            <p><label for="hoaAmount">HOA Amount</label>
-              <input type="text" id="hoaAmount" name="hoaAmount"></p>
+            <p><label for="hoaFee">HOA Fee</label>
+              <input type="text" id="hoaFee" name="hoaFee"></p>
           </div>
 
          <div class="col-md-3 col-sm-7 well smartphone neighborhood"><h2>Neighborhood</h2>
