--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
   </head>
-  <body class='austin'>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+  <body class='homepage'>
+      <nav class="navbar navbar-inverse navbar-fixed-top" id='navbar'>
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">HOME</a>
+      <a class="navbar-brand">MyHomesMatchmaker</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -31,8 +31,12 @@
         <!-- <li><a href="new">Sell My Home</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><% cookies.forEach(function(cookie) { %>
+      <p style='color:red'><%= cookie %></p>
+      <% }) %></li>
         <li><a href="tel:5122709688">512-270-9688</a></li>
-        <li><a href="login">Login/Register</a></li>
+        <li><% cookies.forEach(function(cookie) { %>
+        <% if (!cookie) { %><a href="/signup">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -42,7 +46,7 @@
   </div>
   <div class="row">
   
-  <div class='col-md-3 col-md-offset-1'>
+  <div class='col-md-3 col-md-offset-1 col-sm-4'>
     <h4>SEARCH NOW</h4>
     <p><a href='/austin'>Austin</a></p>
     <p><a href='/chicago'>Chicago</a></p>
@@ -53,7 +57,8 @@
 
   </div>
 
-  <div class='col-md-3'>
+
+  <div class='col-md-3 col-sm-4'>
     <h4>COMING SOON</h4>
     <p><a href='/boulder'>Boulder</a></p>
     <p><a href='/dallas'>Dallas/Ft. Worth</a></p>
@@ -66,7 +71,7 @@
 
   </div>
 
-  <div class='col-md-3 col-md-offset-1'>
+  <div class='col-md-3 col-md-offset-1 col-sm-4'>
     <h4>COMING NEXT YEAR</h4>
     <p><a href='/annapolis'>Annapolis</a></p>
     <p><a href='/alrlington'>Arlington</a></p>
@@ -82,8 +87,16 @@
   </div>
 </div>
 
+   <div class='row footerMargin'>
+    </div>
 
-
+     <nav class="navbar navbar-fixed-bottom" id='navbar'>
+            <div class="container">
+                <div class="row">
+                        <small>MyHomesMatchmaker - Top agents from top firms across the country looking out for you!</small>
+                </div>
+            </div>
+        </nav>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   </body>
