--- a/views/searchPageCS.ejs
+++ b/views/searchPageCS.ejs
@@ -15,7 +15,7 @@
   </head>
   <body class='collegeStation' id="searchPageBody">
     <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" id='navbar'>
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -25,8 +25,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href='/'>HOME</a>
-      <a class="navbar-brand">COLLEGE STATION</a>
+     <a class="navbar-brand" href='/'>MyHomesMatchmaker</a>
+      <!-- <a class="navbar-brand">COLLEGE STATION</a> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -36,8 +36,10 @@
         <!-- <li><a href="new">Sell My Home</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li><% theUser.forEach(function(user){ if (user) { %><a href='/collegeStationFavs/<%= theUser[0]._id %>'>My Favorites</a><% } })%></li>
         <li><a href="tel:5122709688">512-270-9688</a></li>
-        <li><a href="login">Login/Register</a></li>
+        <li><% cookies.forEach(function(cookie) { %>
+        <% if (!cookie) { %><a href="/signup">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -284,7 +286,7 @@
       
        <div class="listingImage rtl">
           <% for (var i = 1; i <= listing.photoCount; i++) { %>
-        <a href="/collegeStation/<%= listing._id %>"><img class="image" src="/images/collegeStationImages/LargePhoto<%= listing.matrixID %>-<%= i %>.jpeg" height="200px" width="250px"></a>
+        <a href="/collegeStation/<%= listing.MLS %>"><img class="image" src="/images/collegeStationImages/LargePhoto<%= listing.matrixID %>-<%= i %>.jpeg" height="200px" width="250px"></a>
         <% } %>
       </div>  
 
@@ -295,7 +297,7 @@
       <div><span class='listingOffice'>Listed by <%= listing.listOffice %></span></div><br>
      </div>
 
-     <div class="amenities"><% if (listing.stories === '1STORY') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"> 1 Stories</button><% } %><% if (listing.stories === '2andHalfSTORY' || listing.stories === '2STORYoMore') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"> 2 Stories</button><% } %><% if (listing.acreage === '' || listing.acreage === "0.00") { %><% } else { %><button id='none' disabled='true'><img src="images/lot-size-icon.png" height="20px" width="20px"><%= listing.acreage %> Acres</button><% } %><% if (listing.garage > 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px"> <%= listing.garage %> Garage</button><% } %><% if (listing.garage == '3PLUS') { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px"> 3+ Garage</button><% } else { %><% } %><% if (listing.fireplace > 0) { %><button id="none" disabled="true"><img src="images/fireplace-icon.png" height="20px" width="20px"> Fireplace</button><% } else { %><% } %><% if (listing.amenities.indexOf('ABVGRNPL') >= 0 || listing.amenities.indexOf('INGRNDPL') >= 0) { %><button id="none" disabled="true"><img src="images/icon-swimming.png" height="20px" width="20px"> Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('POOL') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Comm Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('CVRPTDE') >= 0) { %><button id="none" disabled="true"><img src="images/covered-patio.png" height="20px" width="20px"> Covered Patio</button><% } else { %><% } %><% if (listing.amenities.indexOf('SPRNKSYS') >= 0) { %><button id="none" disabled="true"><img src="images/sprinkler.png" height="20px" width="20px"> Sprinkler</button><% } else { %><% } %><% if (listing.amenities.indexOf('BRNSTBL') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Barn/Stables</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('BACKPARK') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Backs to Park</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('CULDESAC') >= 0) { %><button id="none" disabled="true"><img src="images/cul-de-sac.png" height="20px" width="20px"> Cul-De-Sac</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('LAKE') >= 0) { %><button id="none" disabled="true"><img src="images/lake-icon.png" height="20px" width="20px"> Lake</button><% } else { %><% } %><div class='DescSchoolsFin'><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Description" data-content="<%= listing.remarks %>">Desc</button><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Schools" data-content="School District: <%= listing.schoolDistrict %>">Schools</button><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Financials" data-content="$/SqFt: $<%= listing.priceSQFT %> <br> HOA: $<%= listing.hoaFee %> <%= listing.hoaTerm %>">Financials</button></div><div><button type="button" class="btn DESC form-control" data-toggle="popover" data-trigger="focus" data-placement="top" title="Darrin Bennett" data-content="[Agent Photo Here] <br> <a href='tel:5122709688'>512-270-9688</a> <br> <a href='mailto:darrin@austinHomesMatchmaker.com'>Email</a>">Contact Agent</button></div></div>
+     <div class="amenities"><% if (listing.stories === '1STORY') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"> 1 Stories</button><% } %><% if (listing.stories === '2andHalfSTORY' || listing.stories === '2STORYoMore') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"> 2 Stories</button><% } %><% if (listing.acreage === '' || listing.acreage === "0.00") { %><% } else { %><button id='none' disabled='true'><img src="images/lot-size-icon.png" height="20px" width="20px"><%= listing.acreage %> Acres</button><% } %><% if (listing.garage > 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px"> <%= listing.garage %> Garage</button><% } %><% if (listing.garage == '3PLUS') { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px"> 3+ Garage</button><% } else { %><% } %><% if (listing.fireplace > 0) { %><button id="none" disabled="true"><img src="images/fireplace-icon.png" height="20px" width="20px"> Fireplace</button><% } else { %><% } %><% if (listing.amenities.indexOf('ABVGRNPL') >= 0 || listing.amenities.indexOf('INGRNDPL') >= 0) { %><button id="none" disabled="true"><img src="images/icon-swimming.png" height="20px" width="20px"> Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('POOL') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Comm Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('CVRPTDE') >= 0) { %><button id="none" disabled="true"><img src="images/covered-patio.png" height="20px" width="20px"> Covered Patio</button><% } else { %><% } %><% if (listing.amenities.indexOf('SPRNKSYS') >= 0) { %><button id="none" disabled="true"><img src="images/sprinkler.png" height="20px" width="20px"> Sprinkler</button><% } else { %><% } %><% if (listing.amenities.indexOf('BRNSTBL') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Barn/Stables</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('BACKPARK') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Backs to Park</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('CULDESAC') >= 0) { %><button id="none" disabled="true"><img src="images/cul-de-sac.png" height="20px" width="20px"> Cul-De-Sac</button><% } else { %><% } %><% if (listing.lotDesc.indexOf('LAKE') >= 0) { %><button id="none" disabled="true"><img src="images/lake-icon.png" height="20px" width="20px"> Lake</button><% } else { %><% } %><div class='DescSchoolsFin'><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Description" data-content="<%= listing.remarks %>">Desc</button><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Schools" data-content="School District: <%= listing.schoolDistrict %>">Schools</button><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Financials" data-content="$/SqFt: $<%= listing.priceSQFT %> <br> HOA: $<%= listing.hoaFee %> <%= listing.hoaTerm %>">Financials</button></div><div><button type="button" class="btn DESC form-control" data-toggle="popover" data-trigger="focus" data-placement="top" title="Amber Dawn Cox" data-content="[Agent Photo Here] <br> <a href='tel:5122709688'><strong>AGENT PHONE</strong></a> <br> <a href='mailto:Amber@MyHomesMatchmaker.com'>Amber@MyHomesMatchmaker.com</a> <br> Keller Williams Realty">Contact Agent</button></div></div>
 
 
 
@@ -306,15 +308,25 @@
 </div>
 </div>
 
-<footer class="footer"> 
-      <div class="container">
-        <p class="text-muted">Copyright info and disclaimers.</p>
-      </div>
-    </footer>
+   <div class='row footerMargin'>
+    </div>
+
+   <nav class="navbar navbar-default navbar-fixed-bottom" id='navbar'>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="margin visible-lg visible-md"></div>
+                        <small>Copyright © 2000-2015 Keller Williams ® Realty. - a real estate franchise company. All information provided is deemed reliable but is not guaranteed and should be independently verified. Properties subject to prior sale or rental. Each brokerage is independently owned and operated.</small>
+                    </div>
+                    
+                </div>
+            </div>
+        </nav>
 
 
    <script src='/javascripts/javascript.js'></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
    <!-- SLICK SLIDER SCRIPT -->
+   <script src='/javascripts/slickSlider.js'></script>
    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
   </body>
