--- a/views/searchPageOrlando.ejs
+++ b/views/searchPageOrlando.ejs
@@ -14,7 +14,7 @@
   </head>
   <body class='orlando' id="searchPageBody">
     <div class="container-fluid">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-fixed-top" id='navbar'>
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -24,8 +24,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href='/'>HOME</a>
-      <a class="navbar-brand">ORLANDO</a>
+      <a class="navbar-brand" href='/'>MyHomesMatchmaker</a>
+      <!-- <a class="navbar-brand">ORLANDO</a> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -35,8 +35,18 @@
         <!-- <li><a href="new">Sell My Home</a></li> -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <!-- THIS IS TO SEARCH BY CITY -->
+         <form class="navbar-form navbar-left" role="search" action='/citySearchOrlando' method='post'>
+    <div class="form-group">
+      <label for='form-control'>Search by City</label>
+        <input type="text" class="form-control" placeholder="Enter City" name='city'>
+    </div>
+    <button type="submit" class="btn btn-default" id='navbar'><span class="glyphicon glyphicon-search"></span></button>
+</form>
+        <li><% theUser.forEach(function(user){ if (user) { %><a href='/orlandoFavs/<%= theUser[0]._id %>'>My Favorites</a><% } })%></li>
         <li><a href="tel:5122709688">512-270-9688</a></li>
-        <li><a href="login">Login/Register</a></li>
+        <li><% cookies.forEach(function(cookie) { %>
+        <% if (!cookie) { %><a href="/signup">Login/Register</a><% } else { %><a href="/signout">Signout <% } })%></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -323,13 +333,13 @@
          <div id="phoneFloatHomePage">
   <div class="justListed text-center">Popular Listings</div>
           <% listings.forEach(function(listing) { %>
-          <% if (listing.city === 'ORLANDO') { %>
+          <% if (listing.city == 'ORLANDO') { %>
           <div class="col-lg-3 col-md-4 col-sm-6 well HOME">
       <div class="statusButtons"><button id="new" disabled="true">MLS Listed</button><button id="new2" disabled="true">Active</button></div>
       
  <div class="listingImage rtl">
           <% for (var i = 1; i <= listing.photoCount; i++) { %>
-        <a href="/chicago/<%= listing._id %>"><img class="image" src="/images/orlandoImages/<%= listing.matrixID %>-<%= i %>.jpeg" height="200px" width="250px"></a>
+        <a href="/orlando/<%= listing.MLS %>"><img class="image" src="/images/orlandoImages/<%= listing.matrixID %>-<%= i %>.jpeg" height="200px" width="250px"></a>
         <% } %>
     </div>
 
@@ -340,7 +350,7 @@
       <div><span class='listingOffice'><%= listing.listOffice %></span></div><br>
      </div>
             <div class="amenities">
-                <% if (listing.propType ==='CondoHotel' || listing.propType === 'Condo') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px">Floor #<%= listing.stories %></button><% } else { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"><%= listing.stories %> Stories</button><% } %><% if (listing.garage.indexOf('1CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">1 Garage</button><% } %><% if (listing.garage.indexOf('2CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">2 Garage</button><% } %><% if (listing.garage.indexOf('3CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">3 Garage</button><% } %><% if (listing.garage.indexOf('4CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">4 Garage</button><% } %><% if (listing.garage.indexOf('5PlusCarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">5+ Garage</button><% } %><% if (listing.garage.indexOf('1CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">1 Carport</button><% } %><% if (listing.garage.indexOf('2CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">2 Carport</button><% } %><% if (listing.garage.indexOf('3CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">3 Carport</button><% } %><% if (listing.pool.indexOf('Private') >= 0) { %><button id="none" disabled="true"><img src="images/icon-swimming.png" height="20px" width="20px"> Pool</button><% } else { %><% } %><% if (listing.lotSize != '0.00') { %><button id='none' disabled='true'><img src="images/lot-size-icon.png" height="20px" width="20px"><%= listing.lotSize %> Acres</button><% } else { %><% } %><% if (listing.fireplace > 0) { %><button id="none" disabled="true"><img src="images/fireplace-icon.png" height="20px" width="20px"> Fireplace</button><% } else { %><% } %><% if (listing.waterfront > 0) { %><button id="none" disabled="true"><img src="images/waterfront-icon.png" height="20px" width="20px"> Waterfront</button><% } else { %><% } %><% if (listing.amenities.indexOf('GolfComm') >= 0) { %><button id="none" disabled="true"><img src="images/golf-icon2.png" height="20px" width="20px"> Golf Comm</button><% } else { %><% } %><% if (listing.pool.indexOf('Community') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Comm Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('GatedComm') >= 0) { %><button id="none" disabled="true"><img src="images/gate-icon.png" height="20px" width="20px"> Gated Comm</button><% } else { %><% } %><div class='DescSchoolsFin'><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Description" data-content="<%= listing.remarks %>">Desc</button>&nbsp;<button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Schools" data-content="Elem: <%= listing.elemSchool %> <br> Middle: <%= listing.middleSchool %> <br>High School: <%= listing.highSchool %>">Schools</button>&nbsp;<button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Financials" data-content="Taxes: $<%= listing.taxes %> <br> $/SqFt: $<%= listing.priceSQFT %> <br> HOA: $<%= listing.hoaFee %> <%= listing.hoaDuration %>">Financials</button></div><div><button type="button" class="btn DESC form-control" data-toggle="popover" data-trigger="focus" data-placement="top" title="Darrin Bennett" data-content="[Agent Photo Here] <br> <a href='tel:5122709688'>512-270-9688</a> <br> <a href='mailto:darrin@austinHomesMatchmaker.com'>Email</a>">Contact Agent</button></div></div>
+                <% if (listing.propType ==='CondoHotel' || listing.propType === 'Condo') { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px">Floor #<%= listing.stories %></button><% } else { %><button id='none' disabled='true'><img src="/images/stories-icon.png" height="20px" width="20px"><%= listing.stories %> Stories</button><% } %><% if (listing.garage.indexOf('1CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">1 Garage</button><% } %><% if (listing.garage.indexOf('2CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">2 Garage</button><% } %><% if (listing.garage.indexOf('3CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">3 Garage</button><% } %><% if (listing.garage.indexOf('4CarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">4 Garage</button><% } %><% if (listing.garage.indexOf('5PlusCarGarage') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">5+ Garage</button><% } %><% if (listing.garage.indexOf('1CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">1 Carport</button><% } %><% if (listing.garage.indexOf('2CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">2 Carport</button><% } %><% if (listing.garage.indexOf('3CarCarport') >= 0) { %><button id='none' disabled='true'><img src="images/garage-icon.png" height="20px" width="20px">3 Carport</button><% } %><% if (listing.pool.indexOf('Private') >= 0) { %><button id="none" disabled="true"><img src="images/icon-swimming.png" height="20px" width="20px"> Pool</button><% } else { %><% } %><% if (listing.lotSize != '0.00') { %><button id='none' disabled='true'><img src="images/lot-size-icon.png" height="20px" width="20px"><%= listing.lotSize %> Acres</button><% } else { %><% } %><% if (listing.fireplace > 0) { %><button id="none" disabled="true"><img src="images/fireplace-icon.png" height="20px" width="20px"> Fireplace</button><% } else { %><% } %><% if (listing.waterfront > 0) { %><button id="none" disabled="true"><img src="images/waterfront-icon.png" height="20px" width="20px"> Waterfront</button><% } else { %><% } %><% if (listing.amenities.indexOf('GolfComm') >= 0) { %><button id="none" disabled="true"><img src="images/golf-icon2.png" height="20px" width="20px"> Golf Comm</button><% } else { %><% } %><% if (listing.pool.indexOf('Community') >= 0) { %><button id="none" disabled="true"><img src="images/swimming.png" height="20px" width="20px"> Comm Pool</button><% } else { %><% } %><% if (listing.amenities.indexOf('GatedComm') >= 0) { %><button id="none" disabled="true"><img src="images/gate-icon.png" height="20px" width="20px"> Gated Comm</button><% } else { %><% } %><div class='DescSchoolsFin'><button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Description" data-content="<%= listing.remarks %>">Desc</button>&nbsp;<button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Schools" data-content="Elem: <%= listing.elemSchool %> <br> Middle: <%= listing.middleSchool %> <br>High School: <%= listing.highSchool %>">Schools</button>&nbsp;<button type="button" class="btn btn-primary DESC" data-toggle="popover" data-trigger="focus" data-placement="top" title="Financials" data-content="Taxes: $<%= listing.taxes %> <br> $/SqFt: $<%= listing.priceSQFT %> <br> HOA: $<%= listing.hoaFee %> <%= listing.hoaDuration %>">Financials</button></div><div><button type="button" class="btn DESC form-control" data-toggle="popover" data-trigger="focus" data-placement="top" title="Wael Georgey" data-content="[Agent Photo Here] <br> <a href='tel:5122709688'><strong>AGENT PHONE</strong></a> <br> <a href='mailto:Wael@MyHomesMatchmaker.com'>Wael@MyHomesMatchmaker.com</a> <br> Properties In Town">Contact Agent</button></div></div>
 
 
 
@@ -351,15 +361,24 @@
 </div>
 
 
+   <div class='row footerMargin'>
+    </div>
 
-<footer class="footer"> 
-      <div class="container">
-        <p class="text-muted">Copyright info and disclaimers.</p>
-      </div>
-    </footer>
+   <nav class="navbar navbar-default navbar-fixed-bottom" id='navbar'>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="margin visible-lg visible-md"></div>
+                        <small>This data is updated daily. Some properties appearing for sale on this web site may subsequently have sold and may no longer be available. The data relating to real estate for sale on this web site comes in part from the IDX program of My Florida Regional Multiple Listing Service, Inc., Copyright 2015. Real estate listings held by brokerage firms other than Properties in Town are marked with the Broker Reciprocity logo, IDX. All information contained herein is deemed reliable but not guaranteed. The information provided is for consumer, non-commercial use only and my not be used for any purpose other than to identify prospective properties consumers may be interested in purchasing.</small>
+                    </div>
+                    
+                </div>
+            </div>
+        </nav>
 
  <script src='/javascripts/javascript.js'></script>
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
  <!-- SLICK SLIDER SCRIPT -->
+ <script src='/javascripts/slickSlider.js'></script>
  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.5.7/slick.min.js"></script>
   </body>
